<resources>
    <string name="default_web_client_id">973930498755-c45vbq8ma07d2e50gi7rri91q1u8ige5.apps.googleusercontent.com</string>
    <string name="facebook_app_id">https://tuluyan-user-login.firebaseapp.com/__/auth/handler</string>
    <string name="app_name">TuluyanApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="fetching_address">Fetching address...</string>
    <string-array name="payment_options">
        <item>In Person</item>
    </string-array>
    <string name="graphhopper_api_key">938b3113-7e26-4d5a-9c70-4808ace8832f</string>
    <string name="view_request">View Request</string>
    <string name="approve_request">Approve</string>
    <string name="reject_request">Reject</string>

    <string-array name="selection_options">
        <item>Monthly</item>
    </string-array>
    <string name="permission_denied_message">Location permission denied. Unable to fetch address.</string>
    <string name="price_format">PHP %1$d.00/month</string>
    <string name="directions">Directions</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app">Tuluyan</string>
    <string name="app1">Welcome to</string>
    <string name="app2">Discover your ideal boarding house.</string>
    <string name="app3">tuluyan.</string>
    <string name="app4">Are you a user?</string>
    <string name="app5">Are you an owner?</string>
    <string name="app6">Username</string>
    <string name="app7">Password</string>
    <string name="app8">Forgot Password?</string>
    <string name="app9">Create Account?</string>
    <string name="app10">Login</string>
    <string name="app11">Or Sign up with</string>
    <string name="app12">Create Account</string>
    <string name="app13">By registering, you are agreeing with our <a style="color:blue;" href="http://www.yourwebsite.com/terms">Terms of Use</a> and <a style="color:blue;" href="http://www.yourwebsite.com/privacy">Privacy Policy</a>.</string>
    <string name="app14">Already have an account?</string>
    <string name="app15">Register</string>
    <string name="app16">Google</string>
    <string name="app17">Facebook</string>
    <string name="app18">Apple</string>
    <string name="app19">Your Location</string>
    <string name="app20">Home</string>
    <string name="app21">Map</string>
    <string name="app22">Search</string>
    <string name="app23">Activity</string>
    <string name="app24">Profile</string>
    <string name="app25">Near you</string>
    <string name="app26">New Listing</string>
    <string name="app28">Post</string>
    <string name="app29">Manage</string>
    <string name="app30">Confirm Password</string>
    <string name="app31">First Name</string>
    <string name="app32">Email Address</string>
    <string name="forgottxt">Enter the email or phone number, we will send you the OTP.</string>
    <string name="app34">Enter the email or phone number</string>
    <string name="app35">Welcome back</string>
    <string name="app37">Lucy,</string>
    <string name="app39">No. of</string>
    <string name="app40">Listings</string>
    <string name="app41">Engagements</string>
    <string name="app42">views per day</string>
    <string name="app43">Popular listing</string>
    <string name="app44">Bookmarks</string>
    <string name="app45">Applications</string>
    <string name="app46">Help</string>
    <string name="app47">Settings</string>
    <string name="app48">Logout</string>
    <string name="app49">Edit Profile</string>
    <string name="app50"> Monkey D. Luffy</string>
    <string name="app51">Landlord Profile</string>
    <string name="app52">Tenant Profile</string>
    <string name="app53">Personal Details</string>
    <string name="app54">First Name</string>
    <string name="app55">Last Name</string>
    <string name="app56">Mobile Number</string>
    <string name="app57">Email Address</string>
    <string name="app58">Address</string>
    <string name="app59">Monkey</string>
    <string name="app60">Luffy</string>
    <string name="app61">Mobile Number</string>
    <string name="app62">09123456789</string>
    <string name="app63">Email Address</string>
    <string name="app64">monkeyluffy@gmail.com</string>
    <string name="app65">Address</string>
    <string name="app66">Pagadian City, ZDS</string>
    <string name="app67">Cancel</string>
    <string name="app68">Save</string>
    <string name="app69">Add new</string>
    <string name="app70">Listing</string>
    <string name="app71">title</string>
    <string name="app72">Middle Name</string>
    <string name="app73">Age</string>
    <string name="app74">Birth Date</string>
    <string name="app75">Address</string>
    <string name="app76">Description</string>
    <string name="app77">Save</string>
    <string name="app78">Save</string>
    <string name="app79">Save</string>
    <string name="app80">Chats</string>
    <string name="app81">Notifications</string>
    <string name="app82">Messages</string>
    <string name="app83">Add Images</string>
    <string name="app84">Listing Information</string>
    <string name="app85">Title</string>
    <string name="app86">Price</string>
    <string name="app87">Payment Method</string>
    <string name="app88">Boarding House</string>
    <string name="app89">1,000</string>
    <string name="app90">Pagadian City</string>
    <string name="app91">Free Wifi,Water and Electricity Bill</string>
    <string name="app92">Post</string>
    <string name="app93">Messages</string>
    <string name="app94">Messages</string>
    <string name="app95">Messages</string>
    <string name="app96">Messages</string>
    <string name="app97">Settings</string>
    <string name="app98">Privacy Settings</string>
    <string name="app99">Change Password</string>
    <string name="app100">Enabled Dark Mode</string>
    <string name="app101">Enabled Push Notifications</string>
    <string name="app103">Manage Requests</string>
    <string name="app104">Approve</string>
    <string name="app105">Reject</string>
    <string name="app106">Personal Details</string>
    <string name="app107">Rental Details</string>
    <string name="app108">Name:</string>
    <string name="app122">Carlos David Tabacon</string>
    <string name="app109">Mobile Number:</string>
    <string name="app121">09123456789</string>
    <string name="app110">carlosdavid@gmail.com</string>
    <string name="app111">Room Preference:</string>
    <string name="app112">Shared Room</string>
    <string name="app113">Start Date:</string>
    <string name="app114">June 23, 2020</string>
    <string name="app115">Payment Method:</string>
    <string name="app116">Email Address:</string>
    <string name="app117">In-Person</string>
    <string name="app118">Request Details</string>
    <string name="app119">Request Sent:</string>
    <string name="app120">June 3, 2023</string>
    <string name="app123">Application</string>
    <string name="app124">Bookmark</string>
    <string name="app125">Messages</string>
    <string name="app126">Messages</string>
    <string name="app127">Messages</string>
    <string name="app128">Messages</string>
    <string name="app129">Messages</string>
    <string name="app130">Messages</string>
    <string name="app131">Messages</string>
    <string name="app132">Messages</string>
    <string name="app133">Messages</string>
    <string name="app134">Messages</string>
    <string name="app135">Messages</string>
    <string name="app136">Messages</string>
    <string name="app137">Messages</string>
    <string name="app138">Messages</string>
    <string name="app139">Messages</string>
    <string name="app140">Messages</string>
    <string name="app141">Messages</string>
    <string name="app142">Messages</string>
    <string name="app143">Messages</string>
    <string name="app144">Messages</string>
    <string name="app145">Messages</string>
    <string name="app146">Messages</string>
    <string name="app147">Messages</string>
    <string name="app148">Messages</string>
    <string name="app149">Messages</string>
    <string name="app150">Messages</string>


    <string name="privacy">
    By registering, you are agreeing with our <a style="color:blue;" href="http://www.yourwebsite.com/terms">Terms of Use</a> and <a style="color:blue;" href="http://www.yourwebsite.com/privacy">Privacy Policy</a>.
</string>


</resources>