<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserApplication">

    <TextView
        android:id="@+id/Rent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app103"
        android:layout_centerHorizontal="true"
        android:textColorHint="@color/black"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_marginTop="13dp"
        android:layout_marginStart="10dp"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/vector"
        android:backgroundTint="@color/blue"
        android:background="@drawable/button_background"
        android:padding="8dp"
        android:elevation="4dp" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/avatar"
        android:layout_below="@id/Rent"
        />

    <LinearLayout
        android:id="@id/linear"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="200dp"
        android:layout_centerHorizontal="true"
        android:padding="13dp"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/approveButton"
            android:layout_marginStart="55dp"
            android:layout_marginEnd="0dp"
            android:layout_width="120dp"
            android:layout_height="48dp"
            android:text="@string/app104"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:background="@drawable/approve_button_background"
            android:padding="8dp"
            android:drawablePadding="4dp"
            android:textStyle="bold
"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/rejectButton"
            android:layout_width="120dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_height="48dp"
            android:text="@string/app105"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:background="@drawable/reject_button_background"
            android:padding="8dp"
            android:drawablePadding="4dp"
            android:textStyle="bold"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app106"
        android:textColorHint="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_below="@id/linear"
        />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app108"
        android:textColorHint="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/details"
        />

    <TextView
        android:id="@+id/name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app122"
        android:textColorHint="@color/black"
        android:layout_marginTop="22dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:layout_below="@id/details"
        />

    <TextView
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app109"
        android:textColorHint="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/name"
        />

    <TextView
        android:id="@+id/number2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app121"
        android:textColorHint="@color/black"
        android:layout_marginTop="12dp"
        android:layout_marginStart="185dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:layout_below="@id/name2"
        />

    <TextView
        android:id="@+id/emadress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app116"
        android:textColorHint="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/number"
        />

    <TextView
        android:id="@+id/emadress2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app110"
        android:textColorHint="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="175dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:layout_below="@id/number2"
        />

    <TextView
        android:id="@+id/rentdetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app107"
        android:textColorHint="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_below="@id/emadress"
        />

    <TextView
        android:id="@+id/roompreference"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app111"
        android:textColorHint="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/rentdetails"
        />

    <TextView
        android:id="@+id/roompreference2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app112"
        android:textColorHint="@color/black"
        android:layout_marginTop="21dp"
        android:layout_marginStart="206dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:layout_below="@id/rentdetails"
        />

    <TextView
        android:id="@+id/startdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app113"
        android:textColorHint="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/roompreference"
        />

    <TextView
        android:id="@+id/startdate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app114"
        android:textColorHint="@color/black"
        android:layout_marginTop="11dp"
        android:layout_marginStart="138dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:layout_below="@id/roompreference2"
        />

    <TextView
        android:id="@+id/paymentmethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app115"
        android:textColorHint="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/startdate"
        />

    <TextView
        android:id="@+id/paymentmethod2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app117"
        android:textColorHint="@color/black"
        android:layout_marginTop="12dp"
        android:layout_marginStart="202dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:layout_below="@id/startdate2"
        />

    <TextView
        android:id="@+id/requestdetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app118"
        android:textColorHint="@color/black"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textSize="23sp"
        android:textStyle="bold"
        android:layout_below="@id/paymentmethod2"
        />

    <TextView
        android:id="@+id/requestsent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app119"
        android:textColorHint="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_below="@id/requestdetails"
        />

    <TextView
        android:id="@+id/requestsent2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app120"
        android:textColorHint="@color/black"
        android:layout_marginTop="11dp"
        android:layout_marginStart="169dp"
        android:layout_marginEnd="30dp"
        android:textColor="@color/black"
        android:textSize="19sp"
        android:layout_below="@id/requestdetails"
        />

</RelativeLayout>