<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TenantEditProfile">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@color/white">

        <ImageButton
            android:id="@+id/tEditProfileBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:padding="12dp"
            android:src="@drawable/back"
            android:background="@android:color/transparent"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/app1" />

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app52"
            android:textColor="@color/black"
            android:textSize="28sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="16dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circularImageView"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:src="@drawable/luffy"
            android:layout_gravity="center"
            android:layout_marginTop="16dp" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/Editimage"
            android:layout_width="39dp"
            android:layout_height="30dp"
            android:src="@drawable/edit"
            android:layout_gravity="center"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/textView26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app53"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="15dp" />

        <TextView
            android:id="@+id/textViewOther4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app54"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp" />

        <EditText
            android:id="@+id/tFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:background="@drawable/edit_rounded"
            android:hint="@string/app59"
            android:minHeight="48dp"
            android:padding="15dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/textViewOther5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app72"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="9dp" />

        <EditText
            android:id="@+id/tMiddleName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapCharacters"
            android:maxLength="1"
            android:textColor="@color/black"
            android:background="@drawable/edit_rounded"
            android:hint="@string/app59"
            android:minHeight="48dp"
            android:padding="15dp"
            android:textColorHint="@color/black"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/textViewOther6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app55"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="9dp" />

        <EditText
            android:id="@+id/tSurName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="@color/black"
            android:background="@drawable/edit_rounded"
            android:hint="@string/app59"
            android:minHeight="48dp"
            android:padding="15dp"
            android:textColorHint="@color/black"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/textViewOther7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app58"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="9dp" />

        <EditText
            android:id="@+id/tAddress"
            android:inputType="textMultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@drawable/edit_rounded"
            android:hint="@string/app66"
            android:minHeight="48dp"
            android:padding="15dp"
            android:textColorHint="@color/black"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/textViewOther8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app61"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="11dp" />

        <EditText
            android:id="@+id/tContactNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textColor="@color/black"
            android:background="@drawable/edit_rounded"
            android:hint="@string/app56"
            android:minHeight="48dp"
            android:padding="15dp"
            android:textColorHint="@color/black"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/textViewOther9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app57"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="13dp" />

        <EditText
            android:id="@+id/tEmailAddress"
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@drawable/edit_rounded"
            android:hint="@string/app64"
            android:minHeight="48dp"
            android:padding="15dp"
            android:textColorHint="@color/black"
            android:layout_marginTop="8dp" />

        <!-- Age and Birth Date Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="150dp"
            android:gravity="center">

            <EditText
                android:id="@+id/tProfileAge"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_rounded"
                android:hint="@string/app73"
                android:inputType="number"
                android:maxLength="2"
                android:minHeight="48dp"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:layout_marginEnd="8dp" />


            <EditText
                android:id="@+id/tBirthDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/edit_rounded"
                android:hint="@string/app74"
                android:minHeight="48dp"
                android:padding="15dp"
                android:textColorHint="@color/black"
                android:inputType="date"
                android:textColor="@color/black"
                android:focusable="false"
                android:clickable="true"
                android:layout_marginStart="8dp" />
        </LinearLayout>

        <!-- Cancel and Save Buttons with spacing -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="60dp"
            android:gravity="center">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button_background"
                android:text="@string/app67"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/saveTenantProfile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:background="@drawable/blue_bg"
                android:text="@string/app68"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
