<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@android:color/white">


    <TextView
        android:id="@+id/textView31"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app46"
        android:layout_marginTop="10dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="70dp"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/textView31"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/gray_bg"
        android:drawableEnd="@drawable/search2"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="text"
        android:minHeight="20dp"
        android:padding="15dp"
        android:textColorHint="@color/black" />

    <TextView
        android:id="@+id/textView38"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextText"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/app81"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView39"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView38"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:text="@string/app82"
        android:textColor="@color/blue"
        android:textSize="37sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/rentbtn"
        android:textAlignment="textStart"
        android:layout_centerHorizontal="true"
        android:paddingLeft="20dp"
        android:layout_width="373dp"
        android:layout_height="83dp"
        android:layout_below="@id/textView39"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/app83"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/filterbtn"
        android:textAlignment="textStart"
        android:layout_centerHorizontal="true"
        android:paddingLeft="20dp"
        android:textSize="15sp"
        android:layout_width="373dp"
        android:layout_height="83dp"
        android:layout_below="@id/rentbtn"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/app84"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/updatedbtn"
        android:layout_centerHorizontal="true"
        android:textAlignment="textStart"
        android:paddingLeft="20dp"
        android:textSize="15sp"
        android:layout_width="373dp"
        android:layout_height="83dp"
        android:layout_below="@id/filterbtn"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/app85"
        android:textColor="@color/black"
        android:textStyle="bold"
        />


</RelativeLayout>